adjusted to changes in model api